# APEX

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  main.rs  types.rs
src/checks/: audio.rs  cpu.rs  gpu.rs  input.rs  latency.rs  memory.rs  mod.rs  network.rs  platform.rs  power.rs  security.rs  services.rs  stability.rs  storage.rs  thermal.rs
src/export/: csv.rs  html.rs  json.rs  mod.rs
src/fixes/: backup.rs  mod.rs  power.rs  registry.rs  services.rs
src/hardware/: cpu.rs  gpu.rs  memory.rs  mod.rs  network.rs  storage.rs  system.rs
src/utils/: mod.rs  privileges.rs  registry.rs
